added axios & mongoose

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "live": "nodemon functions"
     },
     "dependencies": {
+        "axios": "^0.21.1",
+        "mongoose": "^5.12.2",
         "request": "^2.88.0",
         "request-promise": "^4.2.4"
     },
